test: add use case unit tests and fix SonarCloud code smells for tramites module